--- a/styles/index.css
+++ b/styles/index.css
@@ -18,7 +18,8 @@ header.main-header {
           align-items: flex-start;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  padding-top: 40px;
+  margin-top: 40px;
+  margin-bottom: 75px;
 }
 
 header.main-header h2 {
