--- a/styles/index.scss
+++ b/styles/index.scss
@@ -15,7 +15,8 @@ header.main-header {
   display: flex;
   align-items: flex-start;
   justify-content: space-around;
-  padding-top: 40px;
+  margin-top: 40px;
+  margin-bottom: 75px;
 
   h2 {
     font-style: normal;
